# ProceduralGeneration

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  pyproject.toml  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml  coverage.yml  linting.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  DefaultProjectSettings.cmake  StaticAnalyzers.cmake  vcpkg-dependencies.cmake
resources/shaders/: LightSource.frag  LightSource.vert  MarchingCubes.frag  MarchingCubes.vert  MarchingCubesFrag.slang  MarchingCubesVert.slang
scripts/: coverage.py
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt
src/engine/opengl/: Shader.cpp  Shader.hpp
src/engine/rendering/: Camera.hpp  GlfwContext.cpp  GlfwContext.hpp  Window.cpp  Window.hpp
src/engine/terrain/: CubeLattice3D.hpp  CubeLatticeScalarField3D.hpp  IScalarFieldGenerator.hpp  LatticeData3D.hpp  MarchingCubesData.hpp  Sphere.cpp  Sphere.hpp  TerrainScalarFieldGenerator.hpp  TorusScalarFieldGenerator.hpp
src/engine/utility/: Assert.hpp  Camera.cpp  Camera.hpp
src/test/: CMakeLists.txt
src/test/opengl/: ShaderTest.cpp
src/test/terrain/: CubeLattice3DTest.cpp  CubeLatticeScalarField3DTest.cpp  LatticeData3DTest.cpp  SphereTest.cpp
src/test/testUtility/: OpenGLTestFixture.hpp  RandomNumberGenerator.hpp
